deploy/kustomize/components/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: efelant-compress
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: efelant-ws
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
